[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/TestWorldMap/World map 5,7 mb (1).png" type="Texture" id=1]
[ext_resource path="res://Nodes/Characters/Player/PlayerGlobalMap/PlayerGlobalMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://Nodes/CameraLocation2D/CameraLocation2D.gd" type="Script" id=3]
[ext_resource path="res://Nodes/Locations/GlobalMapLocation/GlobalMapLocation.gd" type="Script" id=4]
[ext_resource path="res://Nodes/Areas/AreaInput/AreaInputButton/AreaInputButton.gd" type="Script" id=5]
[ext_resource path="res://Nodes/TestLocation/TestLocation.tscn" type="PackedScene" id=6]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 83, 1251, 15, 1289, 33, 1248, 238, 1256, 405, 1187, 449, 1177, 401, 1269, 370, 1313, -254, 887, -279, 853, -240, 851, -98, 996, 643, 642, 674, 638, 655, 686, 618, 714, 25, 548, 41, 522, 57, 547, 29, 563, 534, 515, 553, 499, 562, 529, 452, 807, 670, 549, 667, 585, 631, 574, 649, 550, 368, 1167, 320, 1159, 582, 531, 591, 511, 617, 506, 594, 596, 556, 754, 476, 813, 209, 406, 226, 386, 266, 400, 325, 434, 273, 995, -186, 729, -77, 620, -43, 621, 330, 917, 291, 383, 329, 405, 601, 747, 457, 437, 499, 474, 491, 502, 393, 459, 117, 499, 111, 441, 164, 392, -145, 633, 312, 1110, -5, 1238, 274, 1068, -9, 599, 398, 870, 6, 588, 19, 585, 416, 844, 89, 540, 95, 517, 361, 433 )
polygons = [ PoolIntArray( 0, 1, 2 ), PoolIntArray( 3, 4, 5, 6, 7 ), PoolIntArray( 8, 9, 10, 11 ), PoolIntArray( 12, 13, 14, 15 ), PoolIntArray( 16, 17, 18, 19 ), PoolIntArray( 20, 21, 22, 23 ), PoolIntArray( 24, 25, 26, 27 ), PoolIntArray( 28, 4, 3, 29 ), PoolIntArray( 30, 31, 32, 27, 26, 33 ), PoolIntArray( 23, 22, 30, 33, 34, 35 ), PoolIntArray( 23, 36, 37, 38, 39 ), PoolIntArray( 40, 11, 10, 41, 42, 43, 44 ), PoolIntArray( 45, 46, 39, 38 ), PoolIntArray( 34, 33, 12, 15, 47 ), PoolIntArray( 48, 49, 50, 51 ), PoolIntArray( 52, 53, 54, 36, 23 ), PoolIntArray( 41, 55, 42 ), PoolIntArray( 56, 29, 3, 0, 2, 57, 11, 58 ), PoolIntArray( 40, 58, 11 ), PoolIntArray( 44, 43, 59 ), PoolIntArray( 60, 44, 59, 61, 62, 63 ), PoolIntArray( 63, 62, 19, 18, 64, 23 ), PoolIntArray( 23, 64, 65, 52 ), PoolIntArray( 23, 39, 66, 51 ), PoolIntArray( 23, 51, 50 ), PoolIntArray( 23, 50, 20 ) ]
outlines = [ PoolVector2Array( 6, 588, 19, 585, 29, 563, 25, 548, 41, 522, 57, 547, 89, 540, 95, 517, 117, 499, 111, 441, 164, 392, 209, 406, 226, 386, 266, 400, 291, 383, 329, 405, 325, 434, 361, 433, 393, 459, 457, 437, 499, 474, 491, 502, 534, 515, 553, 499, 562, 529, 582, 531, 591, 511, 617, 506, 649, 550, 670, 549, 667, 585, 631, 574, 594, 596, 643, 642, 674, 638, 655, 686, 618, 714, 601, 747, 556, 754, 476, 813, 452, 807, 416, 844, 398, 870, 330, 917, 273, 995, 274, 1068, 312, 1110, 320, 1159, 368, 1167, 405, 1187, 449, 1177, 401, 1269, 370, 1313, 238, 1256, 83, 1251, 15, 1289, 33, 1248, -5, 1238, -98, 996, -254, 887, -279, 853, -240, 851, -186, 729, -145, 633, -77, 620, -43, 621, -9, 599 ) ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 200.5, 69.5 )

[node name="GlobalMapLocation" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
navpoly = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 105, 748 )

[node name="Line2D" type="Line2D" parent="."]
width = 1.0
default_color = Color( 1, 0, 0, 1 )

[node name="CameraLocation2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 3 )

[node name="PlayerGlobalMap" parent="." instance=ExtResource( 2 )]

[node name="AreaInputButton" type="Area2D" parent="."]
script = ExtResource( 5 )
LoadSceane = ExtResource( 6 )
NameLocation = "TestLocation"

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaInputButton"]
position = Vector2( 36, 902 )
rotation = 0.764454
shape = SubResource( 2 )

[node name="Button" type="Button" parent="AreaInputButton"]
visible = false
margin_right = 12.0
margin_bottom = 20.0
disabled = true
text = "Enter in "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLocation" type="Label" parent="AreaInputButton"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="AreaInputButton" to="AreaInputButton" method="_on_AreaInputButton_body_entered"]
[connection signal="body_exited" from="AreaInputButton" to="AreaInputButton" method="_on_AreaInputButton_body_exited"]
[connection signal="input_event" from="AreaInputButton" to="AreaInputButton" method="_on_AreaInputButton_input_event"]
[connection signal="mouse_entered" from="AreaInputButton" to="AreaInputButton" method="_on_AreaInputButton_mouse_entered"]
[connection signal="mouse_exited" from="AreaInputButton" to="AreaInputButton" method="_on_AreaInputButton_mouse_exited"]
[connection signal="mouse_entered" from="AreaInputButton/Button" to="AreaInputButton" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="AreaInputButton/Button" to="AreaInputButton" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="AreaInputButton/Button" to="AreaInputButton" method="enter_on_location"]
